Refactorización y nuevas vistas y viewmodels añadidos
Se eliminó la referencia a `InicioView` en `App.xaml.cs` y se reemplazó con `ReservaShell` como la página principal. Se eliminaron `AppShell.xaml`, `AppShell.xaml.cs`, `Message.cs`, `InicioView.xaml`, `InicioView.xaml.cs`, `InicioViewModel.cs`, `Form1`, `Form1.Designer.cs`, `Form1.cs`, `Program.cs` y el proyecto `ReservasHotelDesktop` del archivo de solución `ReservasHoteleria.sln`.

Se actualizaron las referencias de paquetes en `ReservaHoteleriaApp.csproj` y `ReservasHoteleriaServices.csproj`, incluyendo la adición de `CommunityToolkit.Mvvm` y `FontAwesome`, y se actualizaron las versiones de otros paquetes.

Se añadieron `ReservaShell.xaml`, `ReservaShell.xaml.cs`, `FlyoutFooter.xaml`, `FlyoutFooter.xaml.cs`, `FlyoutHeader.xaml`, `FlyoutHeader.xaml.cs`, `AddEditReservaViewModel.cs`, `AddEditServicioAdicionalViewModel.cs`, `IniciarSesionViewModel.cs`, `ReservaShellViewModel.cs`, `ReservasViewModel.cs`, `ServiciosAdicionalesViewModel.cs`, `AddEditReservaView.xaml`, `AddEditReservaView.xaml.cs`, `AddEditServicioAdicionalView.xaml`, `AddEditServicioAdicionalView.xaml.cs`, `IniciarSesionView.xaml`, `IniciarSesionView.xaml.cs`, `ReservasView.xaml`, `ReservasView.xaml.cs`, `ServiciosAdicionalesView.xaml`, `ServiciosAdicionalesView.xaml.cs`, `Home.cs`, `Home.Designer.cs`, `Home.resx`, `Program.cs`, `ReservasHoteleriaDesktop.csproj`, `EmpleadosViews.cs`, `EmpleadosViews.Designer.cs`, `EmpleadosViews.resx`, `HabitacionesViews.cs`, `HabitacionesViews.Designer.cs`, `HabitacionesViews.resx`, `ReservasViews.Designer.cs`, `ReservasViews.resx`, `ServiciosAdiconalesViews.cs`, `ServiciosAdiconalesViews.Designer.cs`, `ServiciosAdiconalesViews.resx`, `ServiciosViews.cs`, `ServiciosViews.Designer.cs`, `ServiciosViews.resx`, `UsuariosViews.cs`, `UsuariosViews.Designer.cs` y `UsuariosViews.resx`.

Se añadieron filtros opcionales a los métodos `Get` en los controladores `RH_HabitacionesController`, `RH_PagosController`, `RH_ReservasC

--- a/ReservaHoteleriaApp/ReservaHoteleriaApp.csproj
+++ b/ReservaHoteleriaApp/ReservaHoteleriaApp.csproj
@@ -57,13 +57,55 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Microsoft.Maui.Controls" Version="$(MauiVersion)" />
-		<PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="$(MauiVersion)" />
-		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="8.0.0" />
+		<PackageReference Include="CommunityToolkit.Mvvm" Version="8.3.2" />
+		<PackageReference Include="FontAwesome" Version="4.7.0" />
+		<PackageReference Include="Microsoft.Maui.Controls" Version="8.0.92" />
+		<PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="8.0.92" />
+		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="8.0.1" />
 	</ItemGroup>
 
 	<ItemGroup>
-	  <MauiXaml Update="View\InicioView.xaml">
+	  <ProjectReference Include="..\ReservasHoteleriaServices\ReservasHoteleriaServices.csproj" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Compile Update="ReservaShell.xaml.cs">
+	    <DependentUpon>ReservaShell.xaml</DependentUpon>
+	  </Compile>
+	  <Compile Update="Views\AddEditServicioAdicionalView.xaml.cs">
+	    <DependentUpon>AddEditServicioAdicionalView.xaml</DependentUpon>
+	  </Compile>
+	  <Compile Update="Views\AddEditReservaView.xaml.cs">
+	    <DependentUpon>AddEditReservaView.xaml</DependentUpon>
+	  </Compile>
+	  <Compile Update="Views\ServiciosAdicionalesView.xaml.cs">
+	    <DependentUpon>ServiciosAdicionalesView.xaml</DependentUpon>
+	  </Compile>
+	  <Compile Update="Views\ReservasView.xaml.cs">
+	    <DependentUpon>ReservasView.xaml</DependentUpon>
+	  </Compile>
+	</ItemGroup>
+
+	<ItemGroup>
+	  <MauiXaml Update="ContentViews\FlyoutFooter.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="ContentViews\FlyoutHeader.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="Views\AddEditServicioAdicionalView.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="Views\AddEditReservaView.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="Views\IniciarSesionView.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="Views\ServiciosAdicionalesView.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="Views\ReservasView.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	</ItemGroup>
