Mejoras UI, autenticación Firebase y ajustes varios
Se han realizado los siguientes cambios:

- En `FlyoutFooter.xaml`, se cambió el color del texto de `GhostWhite` a `Black`.
- En `FlyoutHeader.xaml`, se cambió la imagen de `xamarinstore.jpg` a `photo.png`.
- En `ReservaHoteleriaApp.csproj`, se añadió la referencia al paquete `FirebaseAuthentication.net` y se actualizó `Views\RegistrarseView.xaml` para su compilación.
- En `ReservaShell.xaml`, se eliminaron propiedades de imagen de fondo y se cambiaron iconos de pestañas.
- En `ReservaShell.xaml.cs`, se añadió la importación de `ReservaHoteleriaApp.Views` y se registró la ruta para `RegistrarseView`.
- Se eliminaron los archivos binarios `perfil.jpg`, `reservas.jpg` y `servicio.jpg`.
- En `AddEditReservaViewModel.cs`, se mejoró la lógica de asignación, validación, carga de habitaciones y guardado de reservas.
- En `AddEditServicioAdicionalViewModel.cs`, se añadió la propiedad `ReservaID` y se mejoró la lógica de guardado y validación.
- En `IniciarSesionViewModel.cs`, se integró la autenticación con Firebase y se mejoró la lógica de inicio de sesión y registro.
- En `ReservasViewModel.cs`, se mejoró la lógica de filtrado de reservas.
- En `ServiciosAdicionalesViewModel.cs`, se corrigió la navegación y se mejoró la lógica de filtrado.
- En `AddEditReservaView.xaml.cs`, se añadió una verificación nula antes de asignar la reserva al `BindingContext`.
- En `IniciarSesionView.xaml`, se cambió el enlace de texto de `Email` a `Mail`.
- En `ReservasView.xaml` y `ServiciosAdicionalesView.xaml`, se rediseñó la interfaz de usuario.
- En `GenericService.cs`, se realizaron varias modificaciones en el método `UpdateAsync` para mejorar la validación de la entidad.
- En `google-services.json`, se añadieron configuraciones para un proyecto de Firebase.
- Se añadió una nueva clase `RegistrarseViewModel` para gestionar la autenticación de usuarios con Firebase.
- Se añadió una nueva vista `RegistrarseView` para el registro de nuevos 

--- a/ReservaHoteleriaApp/ReservaHoteleriaApp.csproj
+++ b/ReservaHoteleriaApp/ReservaHoteleriaApp.csproj
@@ -58,6 +58,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="CommunityToolkit.Mvvm" Version="8.3.2" />
+		<PackageReference Include="FirebaseAuthentication.net" Version="4.1.0" />
 		<PackageReference Include="FontAwesome" Version="4.7.0" />
 		<PackageReference Include="Microsoft.Maui.Controls" Version="8.0.92" />
 		<PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="8.0.92" />
@@ -100,6 +101,9 @@
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	  <MauiXaml Update="Views\IniciarSesionView.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="Views\RegistrarseView.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	  <MauiXaml Update="Views\ServiciosAdicionalesView.xaml">
