Añadir campos y relaciones en modelo de datos
Se ha añadido el campo `NombreCliente` a la entidad `RH_Reserva` y se ha actualizado el contexto de datos y las migraciones correspondientes. Se ha añadido la propiedad `RH_ReservaID` a la entidad `RH_Habitacion` y se ha creado una relación de clave foránea entre `RH_Habitacion` y `RH_Reserva`.

Se han realizado cambios en la interfaz de usuario, incluyendo ajustes en el diseño del formulario principal y la adición de un botón `Imprimir` en `ReservasViews`.

Se ha añadido un nuevo informe en formato RDLC para mostrar detalles de reservas hoteleras y se han configurado las fuentes de datos necesarias.

Se han añadido nuevas clases y métodos para la funcionalidad de informes y una pantalla de carga (`Splash`).

Se han añadido archivos de recursos y configuraciones específicas para MySQL.

--- a/ReservasHoteleriaDesktop/ReservasHoteleriaDesktop.csproj
+++ b/ReservasHoteleriaDesktop/ReservasHoteleriaDesktop.csproj
@@ -9,6 +9,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Reports\ReservasReport.rdlc" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="Reports\ReservasReport.rdlc" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="FontAwesome.Sharp" Version="6.6.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.10">
       <PrivateAssets>all</PrivateAssets>
@@ -21,10 +29,47 @@
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.EntityFrameworkCore" Version="8.0.6" />
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="8.0.2" />
+    <PackageReference Include="ReportViewerCore.WinForms" Version="15.1.25" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\ReservasHoteleriaServices\ReservasHoteleriaServices.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="Microsoft.ReportViewer.Common">
+      <HintPath>Paquetes\Paquetes\Microsoft.ReportViewer.Common.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.ReportViewer.WinForms">
+      <HintPath>Paquetes\Paquetes\Microsoft.ReportViewer.WinForms.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Update="DataSet\ReservasHoteleriaDataSet.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>ReservasHoteleriaDataSet.xsd</DependentUpon>
+    </Compile>
+    <Compile Update="Properties\Resources.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="DataSet\ReservasHoteleriaDataSet.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>ReservasHoteleriaDataSet.Designer.cs</LastGenOutput>
+    </None>
   </ItemGroup>
 
 </Project>
