Actualización masiva de UI y mejoras en informes
Se han realizado múltiples cambios en la interfaz de usuario y en la gestión de informes, incluyendo:

- Actualización de imágenes y textos en `MainPage.xaml`.
- Rediseño de interfaces en `AddEditReservaView.xaml` y `AddEditServicioAdicionalView.xaml`.
- Reorganización de botones en `ReservasView.xaml` y `ServiciosAdicionalesView.xaml`.
- Ampliación del conjunto de datos `ReservasHoteleriaDataSet` con nuevas tablas y métodos.
- Adición de nuevos informes RDLC para empleados, habitaciones, servicios y servicios adicionales.
- Creación de nuevas páginas y componentes en Blazor para la gestión de empleados, habitaciones, reservas y servicios.
- Implementación de autenticación con Firebase en `Login.razor` y `SingUp.razor`.
 Y proyecto finalizado :)

--- a/ReservasHoteleriaDesktop/ReservasHoteleriaDesktop.csproj
+++ b/ReservasHoteleriaDesktop/ReservasHoteleriaDesktop.csproj
@@ -13,6 +13,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <EmbeddedResource Include="Reports\HabitacionesReport.rdlc" />
+    <EmbeddedResource Include="Reports\ServiciosAdicionales.rdlc" />
+    <EmbeddedResource Include="Reports\Servicios.rdlc" />
+    <EmbeddedResource Include="Reports\EmpleadosReport.rdlc" />
     <EmbeddedResource Include="Reports\ReservasReport.rdlc" />
   </ItemGroup>
 
