--- a/.github/workflows/main_reservashoteleriaweb.yml
+++ b/.github/workflows/main_reservashoteleriaweb.yml
@@ -22,10 +22,10 @@ jobs:
           dotnet-version: '8.x'
 
       - name: Build with dotnet
-        run: dotnet build ReservasHoteleriaWeb\ReservasHoteleriaWeb.csproj --configuration Release
+        run: dotnet build ReservasHoteleriaWeb/ReservasHoteleriaWeb.csproj --configuration Release
 
       - name: dotnet publish
-        run: dotnet publish ReservasHoteleriaWeb\ReservasHoteleriaWeb.csproj -c Release -o "${{env.DOTNET_ROOT}}/myapp"
+        run: dotnet publish ReservasHoteleriaWeb/ReservasHoteleriaWeb.csproj -c Release -o "${{env.DOTNET_ROOT}}/myapp"
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
@@ -61,5 +61,5 @@ jobs:
         with:
           app-name: 'reservashoteleriaweb'
           slot-name: 'Production'
-          package: .
+          package: ${{env.DOTNET_ROOT}}/myapp
           
