--- a/.github/workflows/main_reservashoteleriaweb.yml
+++ b/.github/workflows/main_reservashoteleriaweb.yml
@@ -61,5 +61,5 @@ jobs:
         with:
           app-name: 'reservashoteleriaweb'
           slot-name: 'Production'
-          package: ${{env.DOTNET_ROOT}}/myapp
+          package: .
           
